fix(clean-repo-sidebar): restore Releases header visibility (#9339)

--- a/source/features/clean-repo-sidebar.css
+++ b/source/features/clean-repo-sidebar.css
@@ -15,11 +15,6 @@
 	}
 
 	@media (width >= 768px) {
-		/* Hide "Releases" header */
-		.Layout-sidebar h2 [href$='/releases'] {
-			display: none;
-		}
-
 		/* Align data section with latest tag/release link #5428 */
 		.Layout-sidebar .Link--muted .octicon {
 			margin-right: 4px !important;
